--- a/Sparkt.WebApp/Views/Home/Index.cshtml
+++ b/Sparkt.WebApp/Views/Home/Index.cshtml
@@ -49,8 +49,8 @@
             <h2>Culture</h2>
             <div class="clear"></div>
             <div class="head-title-content">
-                <ul class="title-navigation">
-                    <li class="cultuer-title-nav"><a href="#culture2" data-id="culture2" class="active"><span>Self-governance</span></a></li>
+                <ul class="title-navigation">                    
+                    <li class="cultuer-title-nav"><a href="#culture2" data-id="culture2"><span>Self-governance</span></a></li>
                     <li class="cultuer-title-nav"><a href="#culture3" data-id="culture3"><span>Truth</span></a></li>
                     <li class="cultuer-title-nav"><a href="#culture4" data-id="culture4"><span>Value</span></a></li>
                     <li class="cultuer-title-nav"><a href="#culture5" data-id="culture5"><span>Choices</span></a></li>
@@ -64,7 +64,7 @@
                 <div class="swiper-container culture-slider">
                     <div class="swiper-wrapper">
 
-                        <div class="swiper-slide" data-hash="culture1">
+                        <div class="swiper-slide"  data-hash="culture1">
                             <div class="slider-inside">
                                 <div class="text-wrapp">
                                     <div class="swiper-container culture-inner-slider">
@@ -161,7 +161,8 @@
                                 <li>Data Engineering</li>
                                 <li>Data & Sensor Design</li>
                                 <li>IOT</li>
-                                <li>Capabilities assessment & Technology Roadmapping</li>
+                                <li>Capabilities Assessment</li>
+                                <li>Technology Roadmapping</li>
                             </ul>
                         </div>
                     </div>
@@ -391,7 +392,8 @@
                                     <li>Data Engineering</li>
                                     <li>Data & Sensor Design</li>
                                     <li>IOT</li>
-                                    <li>Capabilities assessment & Roadmapping</li>
+                                    <li>Capabilities Assessment</li>
+                                    <li>Technology Roadmapping</li>
                                 </ul>
                             </div>
                         </li>
@@ -589,7 +591,7 @@
                         <figure>
                             <span class="profile-img  down-art"> <img src="~/Content/images/squad/guru.png" alt=""> </span>
                             <figcaption>
-                                <h5 class="ellipsify">Director Data Consultant</h5>
+                                <h5 class="ellipsify">Director Marketing Sciences</h5>
                                 <h4 class="ellipsify"><span>Guru</span></h4>
                             </figcaption>
                         </figure>
@@ -789,7 +791,7 @@
                     <li>
                         <a href="@Url.Action("UCypher","work")"><img src="~/Content/images/clients/uCypher-logo.png" alt="U Cypher" /></a>
                     </li>
-                    <li> <a tyle="cursor:default"><img src="~/Content/images/clients/u-mumba.png" alt="u-mumba" /></a> </li>
+                    @*<li> <a tyle="cursor:default"><img src="~/Content/images/clients/u-mumba.png" alt="u-mumba" /></a> </li>*@
                     @*<li> <a tyle="cursor:default"><img src="~/Content/images/clients/u-dream.png" alt="u-dream" /></a> </li>*@
                     <li>
                         <a style="cursor:default"><img src="~/Content/images/clients/pro-kabaddi.png" alt="Pro Kabaddi" /></a>
@@ -1319,7 +1321,7 @@ e = d.getElementsByTagName(s)[0];e.parentNode.insertBefore(i, e);
                                         <div class="g-recaptcha" id="recaptcha1" data-theme="light" style="transform:scale(0.77);-webkit-transform:scale(0.77);transform-origin:0 0;-webkit-transform-origin:0 0;"></div>
                                     </div>
                                     <div class="input-field col s12 center ">
-                                        <button type="submit" name="action"  id="btnSubmit"> </button>
+                                        <button class="submit-btn" type="submit" name="action"  id="btnSubmit"> </button>
                                     </div>
                                 </div>
                                 <div></div>
