--- a/Sparkt.WebApp/Views/Shared/_Layout.cshtml
+++ b/Sparkt.WebApp/Views/Shared/_Layout.cshtml
@@ -91,7 +91,7 @@
         </div>
     }
     <header>
-        <a href="Home/index" class="sparkt-logo"> <img src="~/Content/images/spaktLogo.png" alt="Sparkt" /> <img src="~/Content/images/spaktLogo-text.png" alt="Sparkt" class="sparkt-text" /> </a>
+        <a href="/" class="sparkt-logo"> <img src="~/Content/images/spaktLogo.png" alt="Sparkt" /> <img src="~/Content/images/spaktLogo-text.png" alt="Sparkt" class="sparkt-text" /> </a>
         <div class="hamburger">
             <div class="line-menu half start"></div>
             <div class="line-menu"></div>
@@ -112,10 +112,12 @@
                     </ul>
                 </li>
                 <li class="main-nav"><a class="hashScroll" href="#clients"><span>Clients</span></a> </li>
-                <li class="main-nav"><a class="hashScroll" href="#work"><span>Work</span></a> </li>
-                <ul class="sub-nav">
-                    <li><a class="hashScroll" href="#showreel"><span>Showreel</span></a></li>
-                </ul>
+                <li class="main-nav">
+                    <a class="hashScroll" href="#work"><span>Work</span></a>
+                    <ul class="sub-nav">
+                        <li><a class="hashScroll" href="#showreel"><span>Showreel</span></a></li>
+                    </ul>
+                </li>
                 <li class="main-nav"><a class="hashScroll" href="#sparktlive"><span>Sparkt Live</span></a> </li>
                 <li class="main-nav"><a class="hashScroll" href="#contact"><span>Get In Touch</span></a> </li>
             </ul>
