--- a/Sparkt.WebApp/Views/Shared/_LayoutWork.cshtml
+++ b/Sparkt.WebApp/Views/Shared/_LayoutWork.cshtml
@@ -41,7 +41,7 @@
 </head>
 <body>
     <header>
-        <a href="@Url.Action("Index","work")" class="sparkt-logo"> <img src="~/Content/work/images/spaktLogo.png" alt="Sparkt" /> <img src="~/Content/work/images/spaktLogo-text.png" alt="Sparkt" class="sparkt-text" /> </a>
+        <a href="/" class="sparkt-logo"> <img src="~/Content/work/images/spaktLogo.png" alt="Sparkt" /> <img src="~/Content/work/images/spaktLogo-text.png" alt="Sparkt" class="sparkt-text" /> </a>
         <div class="hamburger">
             <div class="line-menu half start"></div>
             <div class="line-menu"></div>
