--- a/Sparkt.WebApp/Content/css/hompage.css
+++ b/Sparkt.WebApp/Content/css/hompage.css
@@ -519,7 +519,7 @@
     }
 
         .squad-wrapp figure figcaption {
-            overflow: hidden;
+            /*overflow: hidden;*/
             padding-bottom: 10px;
         }
 
@@ -532,7 +532,7 @@
                 text-overflow: ellipsis;
                 overflow: visible;
                 font-size: 16px;
-                display: block !important;
+                display: block !important;               
             }
 
             .squad-wrapp figure figcaption h4 {
@@ -541,8 +541,9 @@
                 line-height: 34px;
                 margin: 0;
                 letter-spacing: 1px;
-                overflow: visible;
+                overflow: hidden;
                 font-weight: bold;
+                padding-bottom: 38px;
             }
 
                 .squad-wrapp figure figcaption h4 span {
@@ -985,7 +986,7 @@
                     -webkit-transform: scale(0.9);
                 }
 
-button {
+button.submit-btn {
     outline: none;
     height: 50px;
     text-align: center;
@@ -1008,7 +1009,7 @@ button {
     transition: all 0.25s ease;
 }
 
-    button:hover {
+    button.submit-btn:hover {
         color: white;
         background: rgba(255,26,0,1);
         background: -moz-linear-gradient(-45deg, rgba(255,26,0,1) 0, rgba(217,36,135,1) 100%);
@@ -1020,15 +1021,15 @@ button {
         filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff1a00', endColorstr='#d92487', GradientType=1 );
     }
 
-    button:active {
+    button.submit-btn:active {
         letter-spacing: 2px;
     }
 
-    button:after {
+    button.submit-btn:after {
         content: "GET IN TOUCH";
     }
 
-    button:focus {
+    button.submit-btn:focus {
         background: rgba(255,26,0,1);
         background: -moz-linear-gradient(-45deg, rgba(255,26,0,1) 0, rgba(217,36,135,1) 100%);
         background: -webkit-gradient(left top, right bottom, color-stop(0, rgba(255,26,0,1)), color-stop(100%, rgba(217,36,135,1)));
@@ -1039,7 +1040,7 @@ button {
         filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff1a00', endColorstr='#d92487', GradientType=1 );
     }
 
-    button.onclic {
+    button.submit-btn.onclic {
         width: 50px;
         border-color: #bbbbbb;
         border-width: 3px;
@@ -1050,16 +1051,16 @@ button {
         animation: rotating 2s 0.25s linear infinite;
     }
 
-        button.onclic:after {
+        button.submit-btn.onclic:after {
             content: "";
         }
 
-        button.onclic:hover {
+        button.submit-btn.onclic:hover {
             color: rgba(255,26,0,1);
             background: white;
         }
 
-    button.validate {
+    button.submit-btn.validate {
         font-size: 13px;
         color: white;
         background: rgba(255,26,0,1);
@@ -1072,7 +1073,7 @@ button {
         filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff1a00', endColorstr='#d92487', GradientType=1 );
     }
 
-        button.validate:after {
+        button.submit-btn.validate:after {
             font-family: Font Awesome\ 5 Free;
             content: "\f00c";
         }
@@ -1231,7 +1232,7 @@ button {
     overflow: hidden;
 }
 
-.swiper-slide-active .culture-inner-slider {
+.cultureslideactive .culture-inner-slider {
     visibility: visible;
     opacity: 1;
 }
@@ -2331,6 +2332,7 @@ span.core-lable {
             font-size: 22px;
             height: 30px;
             line-height: 30px;
+            padding-bottom:26px;
         }
 
     .squad-wrapp {
@@ -3088,6 +3090,6 @@ span.core-lable {
     width:100%;
     height:100%;
     z-index:9999;
-    background-color:rgba(0,0,0,0.8);
+    background-color:rgba(0,0,0,0.0);
     display:none;
 }
