--- a/Sparkt.WebApp/Views/Home/Index.cshtml
+++ b/Sparkt.WebApp/Views/Home/Index.cshtml
@@ -949,11 +949,19 @@
                                         <img src="~/Content/work/images/thums/mmf-info-thum.jpg" alt="">
                                         <div class="caption">
                                             <h4>MMF NFO Launches</h4>
-                                            <p>Not a shaadi material</p>
+                                            <p></p>
                                         </div>
                                     </a>
                                 </li>
-
+                                <li>
+                                    <a href="@Url.Action("HSPubh","work")">
+                                        <img src="~/Content/work/images/thums/hsubh-thum.jpg" alt="">
+                                        <div class="caption">
+                                            <h4> Har Shaakh Pe Ullu Baithaa Hai</h4>
+                                            <p></p>
+                                        </div>
+                                    </a>
+                                </li>
 
                             </ul>
                         </div>
@@ -992,6 +1000,15 @@
                                         <div class="caption">
                                             <h4>DANCE+2</h4>
                                             <p>Getting the nation to dance to our tune with video innovations and thumbstopping content</p>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="@Url.Action("TedGoogleCards","work")">
+                                        <img src="~/Content/work/images/thums/ted-thum.jpg" alt="">
+                                        <div class="caption">
+                                            <h4>TED GOOGLE CARDS</h4>
+                                            <p></p>
                                         </div>
                                     </a>
                                 </li>
@@ -1183,6 +1200,24 @@
                                         <div class="caption">
                                             <h4>Ishqbaaaz</h4>
                                             <p>Bringing alive the characters of the three brothers and their special bond with exclusive digital content</p>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="@Url.Action("HSPubh","work")">
+                                        <img src="~/Content/work/images/thums/hsubh-thum.jpg" alt="">
+                                        <div class="caption">
+                                            <h4>Har Shaakh Pe Ullu Baithaa Hai</h4>
+                                            <p></p>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="@Url.Action("Kullfi","work")">
+                                        <img src="~/Content/work/images/thums/kullfi-thum.jpg" alt="">
+                                        <div class="caption">
+                                            <h4>Kulfi</h4>
+                                            <p></p>
                                         </div>
                                     </a>
                                 </li>
