--- a/Sparkt.WebApp/Views/work/HSPubh.cshtml
+++ b/Sparkt.WebApp/Views/work/HSPubh.cshtml
@@ -21,9 +21,8 @@
                 <div class="clear"></div>
                 <span>Kya Ullu Banaya</span>
             </div>
-            @Html.Partial("_WorkMenu");
         </div>
-      
+        @Html.Partial("_WorkMenu");
     </div>
     <div class="section">
         <div class="head-title floated ">
@@ -239,7 +238,7 @@
                         <div class="creative-assets">
                             <div class="container">
                                 <div class="assets-title">
-                                    <h3>Chaitu Lal's Plitical Promises <br>brought alive with an animated avatar</h3>
+                                    <h3>Chaitu Lal's Political Promises <br>brought alive with an animated avatar</h3>
                                 </div>
                                 <div class="sparkt-carousel">
                                     <div class="mobile-wrapp">
@@ -251,17 +250,17 @@
                                         <span class="chaitu-elem elem-6"><img src="~/Content/work/images/chaitulala-elem-6.png" alt="" /></span>
                                         <div class="video-slider">
                                             <div class="video-item">
-                                                <video poster="images/video-thums/chaitulal-anim-thum-1.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="~/Content/work/images/video-thums/chaitulal-anim-thum-1.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/PtyjF-6Lajk" type="video/youtube" />
                                                 </video>
                                             </div>
                                             <div class="video-item">
-                                                <video poster="images/video-thums/chaitulal-anim-thum-2.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="~/Content/work/images/video-thums/chaitulal-anim-thum-2.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/mwWqTSilvIE" type="video/youtube" />
                                                 </video>
                                             </div>
                                             <div class="video-item">
-                                                <video poster="images/video-thums/chaitulal-anim-thum-3.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                <video poster="~/Content/work/images/video-thums/chaitulal-anim-thum-3.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/PPCj00dXr14" type="video/youtube" />
                                                 </video>
                                             </div>
@@ -293,18 +292,16 @@
         <div class="container bottom-padding-none">
             <div class="result-wrapp">
                 <ul class="fadeUp t-infinity">
-                    <li class="col-4 hvr-float-shadow">
-                        <div class="result-info "> <span class="result-from">FACEBOOK VIDEO VIEWS</span> <span class="result-points">55.4</span> <span class="result">MILLION +</span> </div>
+                    <li class="col-3 hvr-float-shadow">
+                        <div class="result-info "> <span class="result-from">VIDEO CONSUMPTION</span> <span class="result-points">72</span> <span class="result">MILLION</span> </div>
                     </li>
-                    <li class="col-4 hvr-float-shadow">
-                        <div class="result-info "> <span class="result-from">FACEBOOK VIDEO VIEWS</span> <span class="result-points">55.4</span> <span class="result">MILLION +</span> </div>
+                    <li class="col-3 hvr-float-shadow">
+                        <div class="result-info "> <span class="result-from">IMPRESSIONS</span> <span class="result-points">303</span> <span class="result">MILLION</span> </div>
                     </li>
-                    <li class="col-4 hvr-float-shadow">
-                        <div class="result-info "> <span class="result-from">FACEBOOK VIDEO VIEWS</span> <span class="result-points">55.4</span> <span class="result">MILLION +</span> </div>
+                    <li class="col-3 hvr-float-shadow">
+                        <div class="result-info "> <span class="result-from">WHATSAPP BROADCAST</span> <span class="result-points">41</span> <span class="result">MILLION</span> </div>
                     </li>
-                    <li class="col-4 hvr-float-shadow">
-                        <div class="result-info "> <span class="result-from">FACEBOOK VIDEO VIEWS</span> <span class="result-points">55.4</span> <span class="result">MILLION +</span> </div>
-                    </li>
+
                 </ul>
             </div>
         </div>
