--- a/Sparkt.WebApp/Views/work/Kullfi.cshtml
+++ b/Sparkt.WebApp/Views/work/Kullfi.cshtml
@@ -10,7 +10,7 @@
             <div class="banner-source">
                 <div class="banner-video">
                     <video class="bannerplayer" poster="~/Content/work/images/banners/kulfi-cover.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
-                        <source type="video/youtube" src="https://youtu.be/y4sgMwqZQRs" />
+                        <source type="video/youtube" src="https://youtu.be/1dL2ZhKZDZ8" />
                     </video>
                 </div>
                 <div class="banner-image" style="background-image: url(../Content/work/images/banners/kulfi-cover.jpg);"> </div>
@@ -24,9 +24,8 @@
                 <div class="clear"></div>
                 <span>She sings about anything!</span>
             </div>
-            @Html.Partial("_WorkMenu");
         </div>
-        
+        @Html.Partial("_WorkMenu");
     </div>
     <div class="section">
         <div class="head-title floated ">
@@ -36,40 +35,51 @@
         <div class="creative-assets-wrapp">
             <div class="assets-carousel fixed " style="background-image: url(../Content/work/images/star-bg.jpg);">
                 <div class="slider">
+
                     <div>
                         <div class="creative-assets">
                             <div class="container">
                                 <div class="assets-title">
-                                    <h3>Skip ads with kullfi charming viewers <br>to watch her musical story</h3>
+                                    <h3>SERIES OF MUSIC VIDEOS SHOWCASING KULLFI’S ABILITY <br>TO SING ABOUT ANYTHING!</h3>
                                 </div>
-                                <div class="mobile-style-carousel">
+                                <div class="sparkt-carousel">
                                     <div class="mobile-wrapp">
-                                        <img src="~/Content/work/images/mobile-slider.png" alt="" class="mobile-vector" />
+                                        <!-- <span class="chaitu-elem elem-7" ><img src="images/chaitulala-elem-7.png" alt=""/></span>-->
+
                                         <div class="video-slider">
                                             <div class="video-item">
-                                                <video poster="~/Content/work/images/video-thums/bharti-haarsh-nach8.png" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
-                                                    <source src="https://youtu.be/xWIp1PGaHcw" type="video/youtube" />
+                                                <video poster="http://img.youtube.com/vi/FmmX4GmRp4s/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                    <source src="https://youtu.be/FmmX4GmRp4s" type="video/youtube" />
                                                 </video>
                                             </div>
                                             <div class="video-item">
-                                                <video poster="~/Content/work/images/video-thums/sanam-abigali-nach8.png" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
-                                                    <source src="https://youtu.be/Z55--9Ei0EA" type="video/youtube" />
+                                                <video poster="http://img.youtube.com/vi/n5n-bLAmclk/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                    <source src="https://youtu.be/n5n-bLAmclk" type="video/youtube" />
                                                 </video>
                                             </div>
                                             <div class="video-item">
-                                                <video poster="~/Content/work/images/video-thums/divyank-vivek-nach8.png" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
-                                                    <source src="https://youtu.be/3Uv0dmH8Xzg" type="video/youtube" />
+                                                <video poster="http://img.youtube.com/vi/33_NVZDfMIs/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                    <source src="https://youtu.be/33_NVZDfMIs" type="video/youtube" />
                                                 </video>
                                             </div>
+
+                                            <div class="video-item">
+                                                <video poster="http://img.youtube.com/vi/ZunNvPz2_bo/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                    <source src="https://youtu.be/ZunNvPz2_bo" type="video/youtube" />
+                                                </video>
+                                            </div>
+
 
 
 
                                         </div>
                                     </div>
                                     <div class="video-nav">
-                                        <div class="nav-item"><a href="#" class="hvr-grow"><img src="~/Content/work/images/video-thums/bharti-haarsh-nach8.png" alt="" /></a> </div>
-                                        <div class="nav-item"><a href="#" class="hvr-grow"><img src="~/Content/work/images/video-thums/sanam-abigali-nach8.png" alt="" /></a> </div>
-                                        <div class="nav-item"><a href="#" class="hvr-grow"><img src="~/Content/work/images/video-thums/divyank-vivek-nach8.png" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/FmmX4GmRp4s/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/n5n-bLAmclk/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/33_NVZDfMIs/maxresdefault.jpg" alt="" /></a> </div>
+
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/ZunNvPz2_bo/maxresdefault.jpg" alt="" /></a> </div>
 
                                     </div>
                                 </div>
@@ -77,6 +87,93 @@
                         </div>
                     </div>
 
+                    <div>
+                        <div class="creative-assets red-base-bg">
+                            <div class="container">
+                                <div class="assets-title">
+                                    <h3>SKIP ADS WITH KULLFI CHARMING VIEWERS <br>TO WATCH HER MUSICAL STORY</h3>
+                                </div>
+                                <div class="sparkt-carousel">
+                                    <div class="mobile-wrapp">
+                                        <span class="youtube-elem elem-1"><img src="~/Content/work/images/youtube-c-panel.png" alt="" /></span>
+                                        <span class="youtube-elem elem-2"><img src="~/Content/work/images/youtube.png" alt="" /></span>
+
+                                        <div class="video-slider">
+                                            <div class="video-item">
+                                                <video poster="http://img.youtube.com/vi/B32UFp9WQKU/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                    <source src="https://youtu.be/B32UFp9WQKU" type="video/youtube" />
+                                                </video>
+                                            </div>
+                                            <div class="video-item">
+                                                <video poster="http://img.youtube.com/vi/u3uaLk36y9A/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                    <source src="https://youtu.be/u3uaLk36y9A" type="video/youtube" />
+                                                </video>
+                                            </div>
+                                            <div class="video-item">
+                                                <video poster="http://img.youtube.com/vi/5SBvjACGdYk/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                    <source src="https://youtu.be/5SBvjACGdYk" type="video/youtube" />
+                                                </video>
+                                            </div>
+
+
+
+
+                                        </div>
+                                    </div>
+                                    <div class="video-nav">
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/B32UFp9WQKU/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/u3uaLk36y9A/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/5SBvjACGdYk/maxresdefault.jpg" alt="" /></a> </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="creative-assets hotstar-bg">
+                            <div class="container">
+                                <div class="assets-title">
+                                    <h3>
+                                        Interventions by KULLFI on Hotstar <br>
+                                        AND YOUTUBE’s MOST popular videos
+                                    </h3>
+                                </div>
+                                <div class="sparkt-carousel">
+                                    <div class="mobile-wrapp">
+                                        <span class="hotstar-elem elem-1"><img src="~/Content/work/images/hotstar-elem-1.png" alt="" /></span>
+                                        <span class="hotstar-elem elem-2"><img src="~/Content/work/images/hotstar-logo.png" alt="" /></span>
+
+                                        <div class="video-slider">
+                                            <div class="video-item">
+                                                <video poster="http://img.youtube.com/vi/HovJd6pnR2M/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                    <source src="https://youtu.be/HovJd6pnR2M" type="video/youtube" />
+                                                </video>
+                                            </div>
+                                            <div class="video-item">
+                                                <video poster="http://img.youtube.com/vi/fRXV9RuFqEw/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                    <source src="https://youtu.be/fRXV9RuFqEw" type="video/youtube" />
+                                                </video>
+                                            </div>
+                                            <div class="video-item">
+                                                <video poster="http://img.youtube.com/vi/2mKbQam0IOc/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                    <source src="https://youtu.be/2mKbQam0IOc" type="video/youtube" />
+                                                </video>
+                                            </div>
+
+
+
+
+                                        </div>
+                                    </div>
+                                    <div class="video-nav">
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/HovJd6pnR2M/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/fRXV9RuFqEw/maxresdefault.jpg" alt="" /></a> </div>
+                                        <div class="nav-item"><a href="#" class="hvr-trim"><img src="http://img.youtube.com/vi/2mKbQam0IOc/maxresdefault.jpg" alt="" /></a> </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -90,16 +187,16 @@
             <div class="result-wrapp">
                 <ul class="fadeUp t-infinity">
                     <li class="col-4 hvr-float-shadow">
-                        <div class="result-info "> <span class="result-from">FACEBOOK VIDEO VIEWS</span> <span class="result-points">55.4</span> <span class="result">MILLION +</span> </div>
+                        <div class="result-info "> <span class="result-from">VIDEO CONSUMPTION</span> <span class="result-points">29.21</span> <span class="result">MILLION</span> </div>
                     </li>
                     <li class="col-4 hvr-float-shadow">
-                        <div class="result-info "> <span class="result-from">FACEBOOK VIDEO VIEWS</span> <span class="result-points">55.4</span> <span class="result">MILLION +</span> </div>
+                        <div class="result-info "> <span class="result-from">IMPRESSIONS</span> <span class="result-points">157</span> <span class="result">MILLION</span> </div>
                     </li>
                     <li class="col-4 hvr-float-shadow">
-                        <div class="result-info "> <span class="result-from">FACEBOOK VIDEO VIEWS</span> <span class="result-points">55.4</span> <span class="result">MILLION +</span> </div>
+                        <div class="result-info "> <span class="result-from">ORGANIC VIDEO CONSUMPTION</span> <span class="result-points">2.91</span> <span class="result">MILLION</span> </div>
                     </li>
                     <li class="col-4 hvr-float-shadow">
-                        <div class="result-info "> <span class="result-from">FACEBOOK VIDEO VIEWS</span> <span class="result-points">55.4</span> <span class="result">MILLION +</span> </div>
+                        <div class="result-info "> <span class="result-from">CPV</span> <span class="result-points">0.32</span> <span class="result">INR</span> </div>
                     </li>
                 </ul>
             </div>
@@ -114,4 +211,3 @@
         </div>
     </div>
 </main>
-
