--- a/Sparkt.WebApp/Views/work/Ted.cshtml
+++ b/Sparkt.WebApp/Views/work/Ted.cshtml
@@ -32,7 +32,9 @@
 
                 <li class="tooltip" title="ACEF: Best use of Celebrity Endorsement - Gold"><img src="~/Content/work/images/awards/acef-gold.png" class="responsive-img" alt="" /> </li>
                 <li class="tooltip" title="ACEF: 	Creativity - Bronze"><img src="~/Content/work/images/awards/acef-bronze.png" class="responsive-img" alt="" /> </li>
-
+                <li class="tooltip" title="CIDCA: Use of Social Media in a campaign - Gold"><img src="~/Content/work/images/awards/cidca-2018-gold.png" class="responsive-img" alt="" /> </li>              
+                <li class="tooltip" title="CIDCA: Integrated - Gold"><img src="~/Content/work/images/awards/cidca-2018-gold.png" class="responsive-img" alt="" /> </li>
+                <li class="tooltip" title="CIDCA: Media Innovation - Silver"><img src="~/Content/work/images/awards/cidca-2018-silver.png" class="responsive-img" alt="" /> </li>
             </ul>
         </div>
 
