--- a/Sparkt.WebApp/Views/work/Ikyawann.cshtml
+++ b/Sparkt.WebApp/Views/work/Ikyawann.cshtml
@@ -27,7 +27,7 @@
         <div class="awards-wrap">
             <ul>
                 <li class="tooltip" title="DIGIXX: Best Use of TV Show Promotion - Gold"><img src="~/Content/work/images/awards/digx-gold.png" class="responsive-img" alt="" /> </li>
-
+                <li class="tooltip" title="CIDCA    : Viral Marketing Campaign - Bronze"><img src="~/Content/work/images/awards/cidca-2018-bronze.png" class="responsive-img" alt="" /> </li>
             </ul>
         </div>
 
