--- a/Sparkt.WebApp/Views/work/Kullfi.cshtml
+++ b/Sparkt.WebApp/Views/work/Kullfi.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Sparkt Work | Kullfi";
+    ViewBag.Title = "Sparkt Work | Kulfi";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
 }
 
